# flutter_fcm_decrypt

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/fcm/decrypt/flutter_fcm_decrypt_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_fcm_decrypt.podspec  libfcm_decrypt.dylib  libfcm_decrypt_64.dylib
lib/: flutter_fcm_decrypt.dart  flutter_fcm_decrypt_bindings_generated.dart  libfcm_decrypt.dylib
linux/: CMakeLists.txt
macos/: flutter_fcm_decrypt.podspec  libfcm_decrypt.dylib  libfcm_decrypt_64.dylib
src/: CMakeLists.txt  flutter_fcm_decrypt.c  flutter_fcm_decrypt.h
windows/: CMakeLists.txt
